# tepc

./: Cargo.toml  k500.txt
benches/: lexbfs.rs
src/: chordals_inductive_generator.rs  common.rs  ideia_numerados.txt  lib.rs  main.rs  rayon.rs  serial.rs  threads.rs
src/Graphs_Generator/: chordals_inductive_generator.py  complete_graphs.py
