[package]
name = "tepc"
version = "0.1.0"
authors = ["Victor Hermann Chiletto <victor.vasconceloschiletto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.4.13"
indexmap = "1.1.0"
num_cpus = "1.10.1"
crossbeam-utils = "0.6.6"

[[bin]]
name = "serial"
path = "src/serial.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"
