[package]
name = "tepc"
version = "0.1.0"
authors = ["Victor Hermann Chiletto <victor.vasconceloschiletto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.2"

[dependencies]
petgraph = "0.4.13"
indexmap = "1.1.0"
num_cpus = "1.10.1"
rayon = "1.2.0"
scoped_threadpool = "0.1.9"

[[bench]]
name = "lexbfs_bench"
path = "benches/lexbfs.rs"
harness = false
